# imagination

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  TODO.merge  configure.in  imagination.1  imagination.desktop.in.in  imagination.spec
doc/: Makefile  Makefile.am  Makefile.in  imagination.xsl
doc/en/: Makefile  Makefile.am  Makefile.in  imagination.xml  imagination.xml.in
doc/en/html/: index.html  working-with-files-and-folders.html
doc/en/images/: Makefile  Makefile.am  Makefile.in
doc/fr/: Makefile.am  imagination.xml  imagination.xml.in
po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  en_GB.po  es.po  fr.po  imagination.pot  it.po  ja.po  ku.po  nl.po  pt_BR.po  ru.po  sl_SI.po  sv.po  zh_CN.po  zh_TW.po
po-doc/: LINGUAS  Makefile.am
sample_ss/: imagination_2_features.imag  make_relative.sh
src/: Makefile.am  audio.c  audio.h  callbacks.c  callbacks.h  export.c  export.h  imagination.c  imagination.h  img_sox.c  img_sox.h  imgcellrendereranim.c  imgcellrendererpixbuf.c  imgtablebutton.c  imgtablebutton.h  main-window.c  main-window.h  new_slideshow.c  new_slideshow.h  slideshow_project.c  slideshow_project.h  subtitles.c  subtitles.h  support.c  support.h  video_formats.c  video_formats.h
transitions/: Makefile.am  bar_wipe.c  barn_door_wipe.c  bow_tie_wipe.c  box_wipe.c  clock_wipe.c  diagonal_wipe.c  ellipse_wipe.c  export_to_ppm.c  export_to_ppm.h  fade.c  four_box_wipe.c  insert.c  misc.c  misc_diagonal_wipe.c  misc_shape_wipe.c  push_wipe.c  wave.c
